--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "csqaq-proxy",
   "version": "1.0.0",
-  "description": "CSQAQ API Proxy for Google Apps Script",
-  "main": "api/proxy.js",
+  "description": "CSQAQ API Proxy",
   "scripts": {
     "dev": "vercel dev"
   },
   "dependencies": {
     "node-fetch": "^2.6.7"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
